# AI_Giraffe-Flow

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  STRUCTURE.md
Requirement/: README.md  vehicle_demo.sor.json
Requirement/archive/: Demo_Car_CAN_Message_Protocol_V08_ussAdvBrcLWJ.dbc  README.md
Requirement/modules/: README.md
apps/: README.md
apps/adapters/: README.md
apps/adapters/mcu_cp_gateway/: CMakeLists.txt  README.md
apps/adapters/mcu_cp_gateway/src/: main.cpp
apps/adapters/vehicle_can_gateway/: CMakeLists.txt
apps/adapters/vehicle_can_gateway/src/: main.cpp
apps/camera_ingest/: README.md
apps/control/: README.md
apps/demo_pipeline/: CMakeLists.txt  README.md
apps/demo_pipeline/src/: main.cpp
apps/ivi/: README.md
apps/perception/: README.md
apps/perception/fcm/: CMakeLists.txt
apps/perception/fcm/src/: main.cpp
apps/planning/: README.md
apps/planning/driving/: CMakeLists.txt
apps/planning/driving/src/: main.cpp
apps/radar/: README.md
apps/sensing/uss/: CMakeLists.txt
apps/sensing/uss/src/: main.cpp
apps/simulators/: README.md
apps/simulators/cp_ipc_peer/: CMakeLists.txt  README.md
apps/simulators/cp_ipc_peer/src/: main.cpp
apps/simulators/uss_feed/: CMakeLists.txt  README.md
apps/simulators/uss_feed/src/: main.cpp
apps/tools/iox_obs_tap/: CMakeLists.txt
apps/tools/iox_obs_tap/src/: main.cpp
apps/vehicle_motion_gateway/: README.md
bindings/: README.md
bindings/dds/: README.md
bridge/: README.md
ci/: README.md
cmake/: Dependencies.cmake  GfModules.cmake  README.md
deploy/: README.md
docs/: README.md
middleware/: README.md
middleware/bindings/cross_domain_ipc/: CMakeLists.txt  README.md
middleware/bindings/cross_domain_ipc/include/gf_ara/com/binding/cross_domain_ipc/: transport.hpp
middleware/bindings/cross_domain_ipc/src/: transport.cpp
middleware/bindings/cross_domain_ipc/tests/: smoke_transport.cpp
middleware/bindings/dds/: CMakeLists.txt  README.md
middleware/bindings/dds/idl/: GfBlob.idl
middleware/bindings/dds/include/gf_ara/com/binding/dds/: cyclone_transport.hpp  event.hpp  runtime.hpp
middleware/bindings/dds/src/: cyclone_transport.cpp  runtime.cpp
middleware/bindings/dds/tests/: smoke_binding.cpp
middleware/bindings/iceoryx/: CMakeLists.txt  README.md
middleware/bindings/iceoryx/include/gf_ara/com/binding/iceoryx/: event.hpp  runtime.hpp  status.hpp
middleware/bindings/iceoryx/src/: runtime.cpp  status.cpp
middleware/bindings/iceoryx/tests/: smoke_binding.cpp
middleware/bindings/someip/: CMakeLists.txt  README.md
middleware/bindings/someip/include/gf_ara/com/binding/someip/: runtime.hpp
middleware/bindings/someip/src/: runtime.cpp
middleware/bindings/someip/tests/: smoke_binding.cpp
middleware/com/: CMakeLists.txt  README.md
middleware/com/include/gf_ara/com/: event.hpp  service_path.hpp
middleware/com/tests/: smoke_loopback_event.cpp
middleware/core/: CMakeLists.txt  README.md
middleware/core/include/gf_ara/core/: error_code.hpp  result.hpp
middleware/core/tests/: smoke_result.cpp
middleware/diag/: CMakeLists.txt  README.md
middleware/diag/include/gf_ara/diag/: doip.hpp  uds_types.hpp
middleware/diag/src/: doip_stack.cpp
middleware/diag/tests/: smoke_doip.cpp
middleware/exec/: CMakeLists.txt  README.md
middleware/exec/include/gf_ara/exec/: execution_client.hpp
middleware/exec/src/: execution_client.cpp
middleware/exec/tests/: smoke_exec.cpp
middleware/osal/: CMakeLists.txt  README.md
middleware/osal/arch/: README.md
middleware/osal/arch/arm/: README.md
middleware/osal/arch/mips/: README.md
middleware/osal/arch/riscv/: README.md
middleware/osal/include/gf/osal/: clock.hpp  thread.hpp
middleware/osal/src/posix/: clock.cpp  thread.cpp
middleware/osal/tests/: smoke_osal.cpp
middleware/phm/: CMakeLists.txt  README.md
middleware/phm/include/gf_ara/phm/: supervised_entity.hpp
middleware/phm/src/: supervised_entity.cpp
middleware/phm/tests/: smoke_alive_deadline.cpp
middleware/ucm/: CMakeLists.txt  README.md
middleware/ucm/include/gf_ara/core/: result.hpp
middleware/ucm/include/gf_ara/ucm/: package_manager.hpp  transfer_handle.hpp
middleware/ucm/src/: package_manager.cpp
middleware/ucm/tests/: smoke_package_manager.cpp
platform/: README.md
projects/: MODULE_INTERFACE_LAYOUT.md  PROCESS_ROLES.md  README.md  UPLOAD_CHECKLIST.md
schemas/: CHANGELOG.md  README.md  gf.sor.schema.json
scripts/: README.md  bootstrap_deps.sh  collect_p2_evidence.sh  cross_link_smoke.sh  run_ab_loop.sh  run_idlc.sh  run_iox_demo.sh  smoke_bd_cyclone.sh  smoke_bd_stub.sh  smoke_eu_stub.sh  smoke_ta.sh
tools/: README.md
tools/codegen/: IMPLEMENTATION.md  README.md  pyproject.toml
tools/codegen/plugins/: README.md
tools/codegen/src/gf_codegen/: __init__.py  cli.py  emit_idl.py  generate_cmd.py  lint_cmd.py  paths.py  schema_load.py  suggest_cmd.py
tools/codegen/src/gf_codegen/compose/: __init__.py  __main__.py  apply_wiring.py  emit_build_cmake.py  emit_platform_tables.py  import_oem.py  lineage.py  load_project.py  merge_platform.py  merge_req.py  observability.py  parse_arxml.py  parse_fdepl.py  parse_fidl.py  parse_hpp.py  pipeline.py  write_sor.py
tools/codegen/tests/: conftest.py  test_afc_bench_golden.py  test_compose_adc_full.py  test_compose_afc_with_uss.py  test_emit_build_cmake.py  test_emit_idl.py  test_generate_proxy_skeleton.py  test_lint_golden.py  test_merge_platform.py  test_observability.py  test_parse_arxml.py  test_parse_fdepl.py  test_parse_fidl.py  test_parse_hpp.py
tools/codegen/tests/fixtures/: emit_idl_sample.sor.json
tools/config/: README.md  pyproject.toml
tools/config/src/gf_config/: __init__.py  cli.py  core.py
tools/config/src/gf_config/gui/: lineage_view.py  main_window.py  platform_editor.py  req_editor.py  wiring_graph.py
tools/gmt/: README.md  pyproject.toml
tools/gmt/fixtures/: session_stub.jsonl
tools/gmt/src/gf_gmt/: __init__.py  architect.py  bridge_foxglove.py  cli.py  measure_export.py  measure_record.py  measure_tag.py
tools/gmt/tests/: test_gmt.py
(+177 files in other folders)
