[project]
name = "gf-codegen"
version = "0.1.0"
description = "Giraffe Flow SOR compose / lint / generate (host tool)"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "cantools>=39.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
gf-codegen = "gf_codegen.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
