[project]
name = "gf-config"
version = "0.1.0"
description = "Giraffe Flow SKU/wiring config GUI (PySide6, host-only)"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "PySide6>=6.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
gf-config = "gf_config.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
