[project]
name = "gf-gmt"
version = "0.1.0"
description = "Giraffe Measure Tool — architect (CI) + measure export (MCAP stub)"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
codegen = ["gf-codegen"]

[project.scripts]
GMT = "gf_gmt.cli:main"
gmt = "gf_gmt.cli:main"  # alias; prefer GMT


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../codegen/src"]
